--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
